add post file example.
