# apps/swagger/swagger.yaml
@@ -2,20 +2,16 @@ swagger: '2.0'
 info:
   title: Pet Shop Example API
   version: "0.1"
-consumes:
-  - application/json
-produces:
-  - application/json
-#security:
-  # enable OAuth protection for all REST endpoints
-  # (only active if the TOKENINFO_URL environment variable is set)
-  #- oauth2: [uid]
 paths:
   /pets:
     get:
       tags: [Pets]
       operationId: app.get_pets
       summary: Get all pets
+      consumes:
+        - application/json
+      produces:
+        - application/json
       parameters:
         - name: animal_type
           in: query
@@ -38,6 +34,10 @@ paths:
       tags: [Pets]
       operationId: app.get_pet
       summary: Get a single pet
+      consumes:
+        - application/json
+      produces:
+        - application/json
       parameters:
         - $ref: '#/parameters/pet_id'
       responses:
@@ -51,6 +51,10 @@ paths:
       tags: [Pets]
       operationId: app.put_pet
       summary: Create or update a pet
+      consumes:
+        - application/json
+      produces:
+        - application/json
       parameters:
         - $ref: '#/parameters/pet_id'
         - name: pet
@@ -66,6 +70,10 @@ paths:
       tags: [Pets]
       operationId: app.delete_pet
       summary: Remove a pet
+      consumes:
+        - application/json
+      produces:
+        - application/json
       parameters:
         - $ref: '#/parameters/pet_id'
       responses:
@@ -73,7 +81,20 @@ paths:
           description: Pet was deleted
         404:
           description: Pet does not exist
-
+  /dog:
+    post:
+      operationId: app.upload
+      consumes:
+        - multipart/form-data
+      produces:
+        - application/json
+      parameters:
+        - name: file
+          in: formData
+          type: file
+      responses:
+        200:
+          description: upload success!
 
 parameters:
   pet_id:
@@ -116,11 +137,3 @@ definitions:
         description: Creation time
         example: "2015-07-07T15:49:51.230+02:00"
         readOnly: true
-
-
-#securityDefinitions:
-#  oauth2:
-#    type: oauth2
-#    flow: implicit
-#    authorizationUrl: https://example.com/oauth2/dialog
-#    scopes:
